--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,68 +11,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageButton
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/_settings_"
-                android:backgroundTint="@color/celeste">
-
-
-
-
-            </ImageButton>
-            <ImageButton
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/flecha"
-                android:backgroundTint="@color/celeste">
-
-
-            </ImageButton>
-        </RelativeLayout>
-
-
+        android:layout_weight="1">
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4"
-        android:orientation="horizontal">
-
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="horizontal">
-
+        android:gravity="center">
+        <Button
+            android:id="@+id/boton_main1"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/celeste"
+            android:text="Productos"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center">
+        <Button
+            android:id="@+id/boton_main2"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/celeste"
+            android:text="Perfil"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center">
+        <Button
+            android:id="@+id/boton_main3"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/celeste"
+            android:text="Administrar"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <Button
-                android:id="@+id/boton_cerrar_sesion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="CERRAR SESION"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/celeste">
-            </Button>
-        </RelativeLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
     </LinearLayout>
 </LinearLayout>
