--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@color/purple"
-    tools:context=".Registro">
+    tools:context=".auth.Registro">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_email"
