--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
@@ -43,7 +44,7 @@
         android:layout_weight="1"
         android:gravity="center">
         <Button
-            android:id="@+id/boton_main3"
+            android:id="@+id/boton_go_admin"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:backgroundTint="@color/celeste"
@@ -53,6 +54,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imagentest"
+            android:layout_width="200dp"
+            android:layout_height="match_parent">
+        </androidx.appcompat.widget.AppCompatImageView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
