--- a/app/src/main/res/layout/activity_administrar.xml
+++ b/app/src/main/res/layout/activity_administrar.xml
@@ -15,10 +15,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Productos"
             android:gravity="center"
-            android:textColor="@color/white">
-        </TextView>
+            android:text="Productos"
+            android:textColor="@color/white"
+            android:textSize="30dp"></TextView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
