--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Menu Principal"
+            android:textSize="30dp"
+            android:gravity="center"
+            android:textColor="@color/white">
+        </TextView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
