--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="celeste">#149daf</color>
     <color name="purple">#6643d3</color>
+    <color name="red">#D50000</color>
 </resources>
