--- a/app/src/main/res/layout/admin_card_producto.xml
+++ b/app/src/main/res/layout/admin_card_producto.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp">
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
         android:layout_height="60dp"
