--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -21,12 +21,10 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:src="@drawable/login"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerInParent="true"
-                >
-            </ImageView>
+                android:src="@drawable/login"></ImageView>
         </RelativeLayout>
     </LinearLayout>
 
@@ -85,6 +83,13 @@
             android:gravity="center"
             android:text="Registrate aqui"
             android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/errorlog"
+            android:layout_width="match_parent"
+            android:layout_height="200px"
+            android:gravity="center"
+            android:textColor="@color/red">
+        </TextView>
 
         <ProgressBar
             android:id="@+id/progress_bar"
