--- a/app/src/main/res/layout/activity_productos_user.xml
+++ b/app/src/main/res/layout/activity_productos_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
-    tools:context=".ui.admin.Administrar"
+    tools:context=".ui.users.productos.ProductosUser"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,19 +26,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recyclerAdmin">
+            android:id="@+id/recyclerUser">
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center">
-        <Button
-            android:id="@+id/admin_agregar"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/celeste"
-            android:text="Agregar"/>
     </LinearLayout>
-
 </LinearLayout>
