--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -70,6 +70,14 @@
         android:backgroundTint="@color/celeste"
         android:text="Registrar"/>
 
+    <TextView
+        android:id="@+id/errorReg"
+        android:layout_width="match_parent"
+        android:layout_height="200px"
+        android:gravity="center"
+        android:textColor="@color/red">
+    </TextView>
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
