--- a/app/src/main/res/layout/activity_agregar_producto.xml
+++ b/app/src/main/res/layout/activity_agregar_producto.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/imagenlayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/baseline_photo_camera_back_24"
+                tools:background="@drawable/baseline_photo_camera_back_24"
                 android:layout_margin="10dp">
             </ImageView>
         </LinearLayout>
